# ocrd_yolo

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  example.json  ocrd-tool.json  pyproject.toml  requirements-dev.txt  requirements.txt
ocrd_yolo/: __main__.py  cli.py  nms.py  ocrd-tool.json  segment.py  utils.py
tests/: .example.json  example.json  minimal_test.py
