[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrd-yolo"
version = "0.1.0"
description = "OCR-D processor for YOLOv11 region segmentation (layout analysis)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["OCR", "OCR-D", "layout-analysis", "YOLO", "YOLOv11", "segmentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ocrd>=2.30.0",
    "click>=7.0",
    "ultralytics>=8.2.0",
    "torch>=1.9.0",
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "shapely>=1.8.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/CrazyCrud/ocrd_yolo"
Repository = "https://github.com/CrazyCrud/ocrd_yolo"
Issues = "https://github.com/CrazyCrud/ocrd_yolo/issues"

[project.scripts]
ocrd-yolo-segment = "ocrd_yolo.__main__:ocrd_yolo_segment"

[tool.setuptools]
packages = ["ocrd_yolo"]
include-package-data = true

[tool.setuptools.package-data]
ocrd_yolo = ["*.json", "ocrd-tool.json"]